[#changelog]
== Changelog

[#v0_9_0]
=== 0.9.0 (UNRELEASED)

 * ic-ref-test: Also send read requests with nonces

[#v0_8_1]
=== 0.8.1 (2020-07-10)

 * Reflect refined process in README and intro.
 * Spec: `ic0.time` added
 * ic-ref(-test): Implement and test `ic0.time`

[#v0_8_0]
=== 0.8.0 (2020-06-23)

 * Spec: Revert the introduction of a domain separator
 * ic-ref(-test): Implement and test the above changes

[#v0_6_2]
=== 0.6.2 (2020-06-23)

 * Spec: Fix meaning-changing typos in `ic.did`
 * ic-ref-test: Be more liberal about the precise reject code in some cases.

[#v0_6_0]
=== 0.6.0 (2020-06-08)

* Spec: Make all canister ids system-chosen
* Spec: HTTP requests for management features are removed
* ic-ref(-test): Implement and test the above changes

[#v0_4_0]
=== 0.4.0 (2020-05-25)

* Spec (editorial): the term “principal” is now used for the _id_ of a canister or
  user, not the canister or user itself
* Spec: The signature of a request needs to be calculated using a domain separator
* Spec: Describe the `controller` attribute, add a request to change it
* Spec: The IC management canister is introduced
* ic-ref(-test): Implement and test the above changes

[#v0_2_16]
=== 0.2.16 (2020-05-29)

* More tests about calls from query methods

[#v0_2_14]
=== 0.2.14 (2020-05-14)

* Spec: Bugfix: Mode should be `reinstall`, not `replace`
* ic-ref-test: A few more tests, refactorings

[#v0_2_12]
=== 0.2.12 (2020-05-06)

* ic-ref-test: Remove code to work around lack of creater cainster.
* ic-ref-test: Stricter tests for bad signatures
* ic-ref: Also accept CBOR maps of indeterminite length

[#v0_2_10]
=== 0.2.10 (2020-04-29)

* ic-ref: Bind to 127.0.0.1 instead of 0.0.0.0
* ic-ref: Set content-type even for error responses
* ic-ref-test: Tests related to query calls
* ic-ref-test: Test “reply after trap in prior callback”

[#v0_2_8]
=== 0.2.8 (2020-04-23)

* Spec: Include section with CDDL description
* ic-ref-test: Block less tests on `create_canister` support
