@@ -4,6 +4,7 @@
 [#v0_9_0]
 === 0.9.0 (UNRELEASED)
 
+ * Spec: Introduction of a domain separator (again)
  * ic-ref-test: Also send read requests with nonces
 
 [#v0_8_1]
